# incus-tui

./: .gitignore  incus-tui.spec  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: homebrew-formula.yml  release.yml
distribution/: README.md
distribution/archlinux/: PKGBUILD
distribution/homebrew/Formula/: incus-tui.rb
distribution/linux/fpm/: make-packages.sh
distribution/scoop/: incus-tui.json
incus_tui/: __init__.py  __main__.py  app.py
incus_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
incus_tui/components/: __init__.py  access.py  admin.py  containers.py  create.py  explorer.py  incus.py  terminal.py  welcome.py
tests/: conftest.py  helpers.py  test_access.py  test_create.py  test_explorer.py  test_incus.py  test_terminal.py  test_welcome.py
